# watcher-agent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  config.json  vcpkg.json
protos/: api.proto
src/: client.cpp  client.h  config.cpp  config.h  cpu.cpp  cpu.h  icpu.h  ilogreader.h  logreader.cpp  logreader.h  main.cpp  retryer.h
